[ocpp20] Add quick start central system and local controller examples

--- a/tools/json2cpp/templates/localcontroller/CentralSystemProxy.cpp.j2
+++ b/tools/json2cpp/templates/localcontroller/CentralSystemProxy.cpp.j2
@@ -47,7 +47,7 @@ CentralSystemProxy{{ocpp_version_suffix}}::CentralSystemProxy{{ocpp_version_suff
     : m_identifier(identifier),
       m_stack_config(stack_config),
       m_websocket(ocpp::websockets::WebsocketFactory::newClientFromPool()),
-      m_rpc(*m_websocket, "ocpp1.6", &rpc_pool),
+      m_rpc(*m_websocket, "{{ocpp_ws_protocol}}", &rpc_pool),
       m_messages_converter(messages_converter),
       m_msg_dispatcher(messages_validator),
       m_msg_sender(m_rpc, messages_converter, messages_validator, stack_config.callRequestTimeout()),
