--- a/tools/json2cpp/templates/centralsystem/IChargePointRequestHandler.h.j2
+++ b/tools/json2cpp/templates/centralsystem/IChargePointRequestHandler.h.j2
@@ -47,7 +47,7 @@ class IChargePointRequestHandler{{ocpp_version_suffix}}
     {%- for msg_name in cs_msgs %}
     /**
      * @brief Called on reception of a {{msg_name}} request from the charge point
-     * @param request Request to received
+     * @param request Request received
      * @param response Response to send
      * @param error Error (Empty if not a CallError)
      * @param message Error message (Empty if not a CallError)
