[ocpp20] Fix clang build

--- a/tools/json2cpp/templates/centralsystem/ChargePointHandler.h.j2
+++ b/tools/json2cpp/templates/centralsystem/ChargePointHandler.h.j2
@@ -63,12 +63,10 @@ class ChargePointHandler{{ocpp_version_suffix}}
      * @param identifier Charge point's identifier
      * @param messages_converter Converter from/to OCPP to/from JSON messages
      * @param msg_dispatcher Message dispatcher
-     * @param stack_config Stack configuration
      */
     ChargePointHandler{{ocpp_version_suffix}}(const std::string&                               identifier,
                        const ocpp::messages::{{ocpp_version_namespace}}::MessagesConverter{{ocpp_version_suffix}}& messages_converter,
-                       ocpp::messages::MessageDispatcher&               msg_dispatcher,
-                       const ocpp::config::ICentralSystemConfig20&        stack_config);
+                       ocpp::messages::MessageDispatcher&               msg_dispatcher);
     /** @brief Destructor */
     virtual ~ChargePointHandler{{ocpp_version_suffix}}();
 
@@ -92,10 +90,6 @@ class ChargePointHandler{{ocpp_version_suffix}}
   private:
     /** @brief Charge point's identifier */
     const std::string m_identifier;
-    /** @brief Stack configuration */
-    const ocpp::config::ICentralSystemConfig{{ocpp_version_suffix}}& m_stack_config;
-    /** @brief Messages converters */
-    const ocpp::messages::GenericMessagesConverter& m_messages_converter;
     /** @brief Request handler */
     IChargePointRequestHandler{{ocpp_version_suffix}}* m_handler;
 };
