--- a/tools/json2cpp/templates/centralsystem/ChargePointHandler.cpp.j2
+++ b/tools/json2cpp/templates/centralsystem/ChargePointHandler.cpp.j2
@@ -39,16 +39,13 @@ namespace {{ocpp_version_namespace}}
 /** @brief Constructor */
 ChargePointHandler{{ocpp_version_suffix}}::ChargePointHandler{{ocpp_version_suffix}}(const std::string&                               identifier,
                                        const ocpp::messages::{{ocpp_version_namespace}}::MessagesConverter{{ocpp_version_suffix}}& messages_converter,
-                                       ocpp::messages::MessageDispatcher&               msg_dispatcher,
-                                       const ocpp::config::ICentralSystemConfig{{ocpp_version_suffix}}&        stack_config)
+                                       ocpp::messages::MessageDispatcher&               msg_dispatcher)
     : 
       {%- for msg_name in cs_msgs %}
       GenericMessageHandler<{{msg_name}}Req, {{msg_name}}Conf>({{msg_name.upper()}}_ACTION, messages_converter),
       {%- endfor %}
 
       m_identifier(identifier),
-      m_stack_config(stack_config),
-      m_messages_converter(messages_converter),
       m_handler(nullptr)
 {
     {%- for msg_name in cs_msgs %}
